--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ body {
 }
 
 .navRowSearch {
-  border: 2px solid black;
+  border: 0.5px solid black;
   border-radius: 20px;
 }
 
@@ -125,8 +125,19 @@ body {
   width: 50px;
 }
 
+@media (max-width: 1100px) {
+  .search {
+    margin: 5px 5px 5px 5px;
+  }
+
+  .navbar {
+    padding-bottom: 30px;
+  }
+}
+
 @media (max-width: 800px) {
   .navbar {
+    padding-bottom: 0px;
     flex-direction: column;
     align-items: flex-start;
   }
