--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,12 @@ body {
   font-size: 20px;
 }
 
+.singleMealDate {
+  text-align: justify;
+  font-size: 12px;
+  font-style: italic;
+}
+
 .singleMealIngredients {
   text-align: justify;
 }
